--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,21 @@
 /*  your css code here. If applicable */
+#container {
+  margin: 20px;
+  position: relative;
+}
+
+#container:before,
+#container:after {
+  content: "Before";
+  color: #f00;
+  font-size: 20px;
+  position: absolute;
+}
+
+#container:before {
+  left: -50px;
+}
+
+#container:after {
+  right: -50px;
+}
