--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,14 @@
-<!DOCTYPE html>
-
-<html>
-
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-	<!-- the entire body must be written by student -->
-	<div id="container">This is the main container element</div>
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
-
-</html>
+/*  your css code here. If applicable */
+#container{
+	margin:20px;
+}
+#container::before{
+	content:"Before Element";
+	color:#f00;
+	font-size:20px;
+}
+#container::after{
+	content:"After Element";
+	color:#f00;
+	font-size:20px;
+}
